# halo2

./: Cargo.toml  README.md
halo2_gadgets/src/sha256/: table16.rs
halo2_gadgets/src/sha256/table16/: compression.rs  message_schedule.rs  spread_table.rs
sha256ipa/: Cargo.toml  sha256_proof_k_17_count_16
sha256ipa/src/: main.rs
sha256ipa/src/inputs/: mod.rs  sha256exp.rs
sha256test/: Cargo.toml
sha256test/src/: main.rs
