[package]
name = "sha256ipa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-std = { version = "0.3", features = ["print-trace"] }
arrayvec = "0.7.0"
bitvec = "1"
ff = "0.13"
group = "0.13"
halo2_proofs = { version = "0.2", path = "../halo2_proofs", features = ["dev-graph"]}
halo2_gadgets = { version = "0.2", path = "../halo2_gadgets", features = ["unstable"]}
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = '0.3.0' }
lazy_static = "1"
pasta_curves = "0.5"
proptest = { version = "1.0.0", optional = true }
rand = "0.8"
subtle = "2.3"
uint = "0.9.2" # MSRV 1.56.1
chrono = "0.4.23"
rand_core = { version = "0.6", default-features = false }
plotters = { version = "0.3.0" }

